<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fav_relativeLayout"
    tools:context=".FavouriteMovies">

    <TextView
        android:id="@+id/favourites_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/expletus_sans"
        android:text="@string/favourites_header"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/fav_scrollView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/favourites_header"
        android:fillViewport="true">

        <ListView
            android:id="@+id/fav_listView"
            android:layout_width="match_parent"
            android:layout_height="569dp"
            android:layout_marginTop="10dp" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/favourite_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fav_scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/favourite_save_btn"
        android:text="@string/save_btn"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:onClick="save"/>

</RelativeLayout>